--- a/package.json
+++ b/package.json
@@ -7,11 +7,23 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@algolia/client-search",
+        "search-insights"
+      ]
+    }
   },
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vitepress": "^1.0.0-rc.39",
     "vitest": "^1.2.0"
   }
 }
